# patchframe

./: .gitignore  README.md  pyproject.toml
benchmarks/: __init__.py  factories.py  run_operator_benchmarks.py
docs/: extensions.md  field-authoring.md  intro.md  operator-authoring.md
docs/design/: adtech-findings.md  aspect-transition-ontology.md  aspect-transition-plan.md  aspect-transition.md  composite-field.md  dataset-accessor.md  design-constraints.md  dimension-join-execution.md  field-identity.md  join-dimensions-identity.md  lazy-and-bundle.md  lazy-duality-plan.md  operator-contract-plan.md  partition-aggregate.md  roadmap.md  schema-specs.md  storage-machinery.md  table-escape.md
examples/: adtech.py  adtech_analysis.py  adtech_journeys.py  audioset.py  audioset_usage.py  inria.py  inria_usage.py  lazy_eager_duality_usage.py  multimodal_fusion.py  persisting_io_usage.py
patchframe/: __init__.py
patchframe/data/: __init__.py  accessor.py  array_source.py  descriptor.py  dimensioned_slice.py  dimensioned_slice_array.py  dimensions.py  manager.py  slices.py  source.py  windows.py
patchframe/dataset/: __init__.py  (+12 more)
tests/: test_array_source.py  test_assignment_sugar.py  test_audioset_example.py  test_benchmark_smoke.py  test_bundle.py  test_bundle_ops.py  test_call_spec.py  test_composite_field.py  test_composite_index_field.py  test_concat.py  test_consume_literal.py  test_context_propagation.py  test_coupling_aliasing.py  test_coupling_and_add_column.py  test_dataset_accessor.py  test_dataset_context.py  test_dimension_comparability.py  test_dimension_join.py  test_dimensional_plan.py  test_dispatch.py  test_drop_keep.py  test_explode.py  test_field_composition.py  test_field_entry.py  test_field_identity.py  test_implode.py  test_index_identity.py  test_index_name_invariant.py  test_inria_example.py  test_join.py  test_join_pipeline.py  test_lazy_arm.py  test_lazy_duality_example.py  test_link.py  test_make_plan.py  test_map_coupling.py  test_map_fields.py  test_match.py  test_merge.py  test_merged_field.py  (+18 more)
(+51 files in other folders)
