[build-system]
requires = ["hatchling>=1.25.0"]
build-backend = "hatchling.build"

[project]
name = "patchframe"
version = "0.1.0"
description = "A dataframe-first infrastructure for lazy multidimensional datasets with typed schema, couplings, and provenance."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "Proprietary" }
authors = [
  { name = "Your Name" }
]
keywords = ["datasets", "dataframe", "lazy-loading", "pandas", "numpy"]
classifiers = [
  "Development Status :: 2 - Pre-Alpha",
  "Intended Audience :: Developers",
  "Intended Audience :: Science/Research",
  "License :: Other/Proprietary License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Scientific/Engineering",
  "Topic :: Software Development :: Libraries :: Python Modules",
]

dependencies = [
  "numpy>=1.24",
  "pandas>=2.0",
  "typing-extensions>=4.8; python_version < '3.11'",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "pytest-cov>=5.0",
  "ruff>=0.6.0",
  "mypy>=1.10",
  "build>=1.2.0",
  "twine>=5.0.0",
]
arrow = ["pyarrow>=14.0"]
examples = [
  "matplotlib>=3.8",
  "soundfile>=0.12",
  "torch>=2.1",
]

[project.urls]
Homepage = "https://github.com/YOUR_ORG/patchframe"
Repository = "https://github.com/YOUR_ORG/patchframe"
Issues = "https://github.com/YOUR_ORG/patchframe/issues"

[tool.hatch.build.targets.wheel]
packages = ["patchframe"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra"

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.mypy]
python_version = "3.10"
warn_unused_configs = true
warn_redundant_casts = true
warn_unused_ignores = true
strict_optional = true
check_untyped_defs = true
no_implicit_optional = true
